--- a/vercel.json
+++ b/vercel.json
@@ -2,21 +2,17 @@
   "version": 2,
   "builds": [
     {
-      "src": "src/server/index.ts",
+      "src": "dist/server/index.js",
       "use": "@vercel/node"
-    },
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "src/server/index.ts"
+      "dest": "dist/server/index.js"
+    },
+    {
+      "handle": "filesystem"
     },
     {
       "src": "/(.*)",
