--- a/vercel.json
+++ b/vercel.json
@@ -19,18 +19,16 @@
       "headers": {
         "Access-Control-Allow-Origin": "https://woolfy.fr",
         "Access-Control-Allow-Credentials": "true",
-        "Access-Control-Allow-Methods": "GET,HEAD,PUT,PATCH,POST,DELETE,OPTIONS",
-        "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
+        "Access-Control-Allow-Headers": "Content-Type, Authorization"
       },
+      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"],
       "dest": "/dist/server/index.js",
-      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"]
-    },
-    {
-      "handle": "filesystem"
+      "continue": true
     },
     {
       "src": "/(.*)",
-      "dest": "/index.html"
+      "dest": "/dist/server/index.js"
     }
   ],
   "env": {
