--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,15 @@
   "version": 2,
   "builds": [
     {
-      "src": "dist/server/index.js",
-      "use": "@vercel/node"
-    },
-    {
       "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
         "distDir": "dist"
       }
+    },
+    {
+      "src": "dist/server/index.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
@@ -22,13 +22,15 @@
         "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
         "Access-Control-Allow-Headers": "Content-Type, Authorization"
       },
-      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"],
-      "dest": "/dist/server/index.js",
-      "continue": true
+      "dest": "/dist/server/index.js"
+    },
+    {
+      "src": "/assets/(.*)",
+      "dest": "/assets/$1"
     },
     {
       "src": "/(.*)",
-      "dest": "/dist/server/index.js"
+      "dest": "/index.html"
     }
   ],
   "env": {
