--- a/vercel.json
+++ b/vercel.json
@@ -16,18 +16,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "dist/server/index.js",
-      "headers": {
-        "Access-Control-Allow-Origin": "https://woolfy.fr",
-        "Access-Control-Allow-Credentials": "true",
-        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
-        "Access-Control-Allow-Headers": "Content-Type, Authorization"
-      },
-      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
-    },
-    {
-      "src": "/(.*)",
-      "dest": "dist/server/index.js",
+      "dest": "/dist/server/index.js",
       "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"],
       "headers": {
         "Access-Control-Allow-Origin": "https://woolfy.fr",
@@ -35,6 +24,18 @@
         "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
         "Access-Control-Allow-Headers": "Content-Type, Authorization"
       }
+    },
+    {
+      "src": "^/assets/(.*)",
+      "dest": "/assets/$1"
+    },
+    {
+      "src": "^/(.*)\\.(js|css|ico|png|jpg|jpeg|svg|gif)$",
+      "dest": "/$1.$2"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ],
   "env": {
