--- a/vercel.json
+++ b/vercel.json
@@ -16,7 +16,13 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "dist/server/index.js"
+      "dest": "dist/server/index.js",
+      "headers": {
+        "Access-Control-Allow-Origin": "https://woolfy.fr",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
+        "Access-Control-Allow-Headers": "Content-Type, Authorization",
+        "Access-Control-Allow-Credentials": "true"
+      }
     },
     {
       "handle": "filesystem"
