--- a/vercel.json
+++ b/vercel.json
@@ -16,9 +16,10 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "dist/server/index.js",
+      "dest": "/dist/server/index.js",
+      "continue": true,
       "headers": {
-        "Access-Control-Allow-Origin": "https://woolfy.fr",
+        "Access-Control-Allow-Origin": "http://localhost:5173",
         "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
         "Access-Control-Allow-Headers": "Content-Type, Authorization",
         "Access-Control-Allow-Credentials": "true"
@@ -35,7 +36,7 @@
   "env": {
     "MONGODB_URI": "${MONGODB_URI}",
     "SESSION_SECRET": "${SESSION_SECRET}",
-    "CLIENT_URL": "https://woolfy.fr",
-    "NODE_ENV": "production"
+    "CLIENT_URL": "http://localhost:5173",
+    "NODE_ENV": "development"
   }
 } 
