--- a/vercel.json
+++ b/vercel.json
@@ -36,7 +36,6 @@
   "env": {
     "MONGODB_URI": "${MONGODB_URI}",
     "SESSION_SECRET": "${SESSION_SECRET}",
-    "CLIENT_URL": "http://localhost:5173",
-    "NODE_ENV": "development"
+    "NODE_ENV": "production"
   }
 } 
