fix: update CORS and paths for production

--- a/vercel.json
+++ b/vercel.json
@@ -19,7 +19,7 @@
       "dest": "/dist/server/index.js",
       "continue": true,
       "headers": {
-        "Access-Control-Allow-Origin": "http://localhost:5173",
+        "Access-Control-Allow-Origin": "https://woolfy.fr",
         "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
         "Access-Control-Allow-Headers": "Content-Type, Authorization",
         "Access-Control-Allow-Credentials": "true"
@@ -30,7 +30,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "/index.html"
+      "dest": "dist/index.html"
     }
   ],
   "env": {
