fix: Configuration Vercel pour le routage SPA - Ajout des rewrites pour le routage client - Configuration globale des CORS - Fix du problème de 404 sur les routes directes

--- a/vercel.json
+++ b/vercel.json
@@ -32,5 +32,26 @@
     "SESSION_SECRET": "${SESSION_SECRET}",
     "NODE_ENV": "production",
     "CLIENT_URL": "https://woolfy.fr"
-  }
+  },
+  "rewrites": [
+    {
+      "source": "/api/:path*",
+      "destination": "/api/:path*"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Credentials", "value": "true" },
+        { "key": "Access-Control-Allow-Origin", "value": "https://woolfy.fr" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
+        { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" }
+      ]
+    }
+  ]
 } 
