--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "src/server/index.ts",
+      "src": "api/**/*.ts",
       "use": "@vercel/node"
     },
     {
@@ -15,16 +15,8 @@
   ],
   "routes": [
     {
-      "src": "/api/auth/(.*)",
-      "dest": "/api/auth/$1"
-    },
-    {
       "src": "/api/(.*)",
-      "dest": "/src/server/index.ts"
-    },
-    {
-      "src": "/socket.io/(.*)",
-      "dest": "/src/server/index.ts"
+      "dest": "/api/$1"
     },
     {
       "handle": "filesystem"
