--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "dev:client": "vite",
     "dev:server": "ts-node-dev --project tsconfig.server.json --respawn --transpile-only src/server/index.ts",
     "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "build:server": "tsc --project tsconfig.server.json",
     "build:client": "vite build",
-    "vercel-build": "npm run build:server && npm run build:client",
+    "vercel-build": "vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "start": "node dist/server/index.js"
