fix: Configuration CORS pour www.woolfy.fr - Mise à jour des variables d'environnement - Ajout du max-age pour les requêtes CORS

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-VITE_API_URL=https://woolfy.fr
-VITE_PROD_API_URL=https://woolfy.fr 
+VITE_API_URL=https://www.woolfy.fr
+VITE_PROD_API_URL=https://www.woolfy.fr 
