--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@emotion/styled": "^11.11.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.8",
+    "@types/socket.io-client": "^1.4.36",
     "@vercel/node": "^5.0.2",
     "bcryptjs": "^2.4.3",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
@@ -36,13 +38,15 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
     "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.7.4",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.10",
+    "@types/jest": "^29.5.14",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.11.16",
     "@types/react": "^18.2.43",
