--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/socket.io-client": "^1.4.36",
     "@vercel/node": "^5.0.2",
+    "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
