--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev:client": "vite",
     "dev:server": "ts-node-dev --project tsconfig.server.json --respawn --transpile-only src/server/index.ts",
     "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "build:server": "tsc --project tsconfig.server.json",
     "build:client": "vite build",
     "vercel-build": "vite build",
