--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc && vite build",
     "build:server": "tsc --project tsconfig.server.json",
     "build:client": "vite build",
-    "vercel-build": "npm install && npx vite build",
+    "vercel-build": "vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "start": "node dist/server/index.js"
@@ -23,6 +23,7 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/socket.io-client": "^1.4.36",
     "@vercel/node": "^5.0.2",
+    "@vitejs/plugin-react": "^4.2.1",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "connect-mongo": "^5.1.0",
@@ -40,6 +41,7 @@
     "react-router-dom": "^6.21.3",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.7.4",
+    "vite": "^5.0.8",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
@@ -54,13 +56,11 @@
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
-    "@vitejs/plugin-react": "^4.2.1",
     "concurrently": "^8.2.2",
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "typescript": "^5.2.2"
   }
 }
