--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,13 @@
     {
       "src": "src/server/index.ts",
       "use": "@vercel/node"
+    },
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
     }
   ],
   "routes": [
@@ -14,6 +21,14 @@
     {
       "src": "/socket.io/(.*)",
       "dest": "src/server/index.ts"
+    },
+    {
+      "src": "/assets/(.*)",
+      "dest": "/assets/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ],
   "env": {
