--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@emotion/styled": "^11.11.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.8",
+    "@types/micro-cors": "^0.1.5",
     "@types/socket.io-client": "^1.4.36",
     "@vercel/node": "^5.0.2",
     "@vitejs/plugin-react": "^4.2.1",
@@ -34,6 +35,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "framer-motion": "^10.18.0",
+    "micro-cors": "^0.1.1",
     "mongoose": "^8.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
