--- a/vercel.json
+++ b/vercel.json
@@ -21,7 +21,7 @@
   ],
   "headers": [
     {
-      "source": "/api/(.*))",
+      "source": "/api/(.*)",
       "headers": [
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
         { "key": "Access-Control-Allow-Origin", "value": "https://www.woolfy.fr" },
