--- a/vercel.json
+++ b/vercel.json
@@ -24,15 +24,15 @@
       "source": "/api/(.*)",
       "headers": [
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
-        { "key": "Access-Control-Allow-Origin", "value": "https://www.woolfy.fr" },
+        { "key": "Access-Control-Allow-Origin", "value": "https://woolfy.vercel.app" },
         { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
-        { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" }
+        { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization, X-Requested-With" }
       ]
     }
   ],
   "env": {
     "NODE_ENV": "production",
-    "VITE_API_URL": "https://www.woolfy.fr",
-    "VITE_PROD_API_URL": "https://www.woolfy.fr"
+    "VITE_API_URL": "https://woolfy-api.vercel.app",
+    "VITE_PROD_API_URL": "https://woolfy-api.vercel.app"
   }
 } 
