--- a/vercel.json
+++ b/vercel.json
@@ -24,10 +24,11 @@
       ]
     }
   ],
-  "rewrites": [
-    { "source": "/api/auth/:path*", "destination": "/api/auth/:path*" }
-  ],
   "routes": [
+    {
+      "src": "/api/auth/(.*)",
+      "dest": "/api/auth/$1"
+    },
     {
       "src": "/assets/(.*)",
       "headers": { "cache-control": "public, max-age=31536000, immutable" },
