--- a/vercel.json
+++ b/vercel.json
@@ -13,36 +13,20 @@
       }
     }
   ],
-  "headers": [
-    {
-      "source": "/api/(.*)",
-      "headers": [
-        { "key": "Access-Control-Allow-Origin", "value": "https://www.woolfy.fr" },
-        { "key": "Access-Control-Allow-Credentials", "value": "true" },
-        { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
-        { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization, X-Requested-With" }
-      ]
-    }
-  ],
   "routes": [
+    {
+      "src": "/api/(.*)",
+      "headers": {
+        "Access-Control-Allow-Origin": "https://www.woolfy.fr",
+        "Access-Control-Allow-Credentials": "true",
+        "Access-Control-Allow-Methods": "GET,OPTIONS,PATCH,DELETE,POST,PUT",
+        "Access-Control-Allow-Headers": "Content-Type, Authorization, X-Requested-With"
+      },
+      "continue": true
+    },
     {
       "src": "/api/auth/(.*)",
       "dest": "/api/auth/$1"
-    },
-    {
-      "src": "/assets/(.*)",
-      "headers": { "cache-control": "public, max-age=31536000, immutable" },
-      "dest": "/assets/$1"
-    },
-    {
-      "src": "/(.*)\\.js",
-      "headers": { "content-type": "application/javascript" },
-      "dest": "/$1.js"
-    },
-    {
-      "src": "/(.*)\\.css",
-      "headers": { "content-type": "text/css" },
-      "dest": "/$1.css"
     },
     {
       "handle": "filesystem"
@@ -51,10 +35,5 @@
       "src": "/(.*)",
       "dest": "/index.html"
     }
-  ],
-  "env": {
-    "NODE_ENV": "production",
-    "VITE_API_URL": "https://woolfy-api.vercel.app",
-    "VITE_PROD_API_URL": "https://woolfy-api.vercel.app"
-  }
+  ]
 } 
