--- a/vercel.json
+++ b/vercel.json
@@ -15,8 +15,9 @@
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
+      "src": "/api/auth/(.*)",
+      "dest": "/api/auth/$1",
+      "methods": ["GET", "POST", "OPTIONS"]
     },
     {
       "handle": "filesystem"
