--- a/vercel.json
+++ b/vercel.json
@@ -19,10 +19,10 @@
       "methods": ["OPTIONS"],
       "headers": {
         "Access-Control-Allow-Origin": "https://www.woolfy.fr",
-        "Access-Control-Allow-Methods": "GET, POST, OPTIONS",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
         "Access-Control-Allow-Headers": "Content-Type, Authorization",
         "Access-Control-Allow-Credentials": "true",
-        "Access-Control-Max-Age": "3600"
+        "Access-Control-Max-Age": "86400"
       },
       "status": 204
     },
@@ -30,7 +30,7 @@
       "src": "/api/(.*)",
       "headers": {
         "Access-Control-Allow-Origin": "https://www.woolfy.fr",
-        "Access-Control-Allow-Methods": "GET, POST, OPTIONS",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
         "Access-Control-Allow-Headers": "Content-Type, Authorization",
         "Access-Control-Allow-Credentials": "true"
       },
