feat: Woolfy et les chaises piégées - Première version du jeu avec interface complète, système de vote, rôles et communications entre joueurs

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc && vite build",
     "build:server": "tsc --project tsconfig.server.json",
     "build:client": "vite build",
-    "vercel-build": "tsc --project tsconfig.vercel.json && npm run build:client",
+    "vercel-build": "tsc --project tsconfig.vercel.json",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "start": "node dist/server/index.js"
