--- a/tsconfig.vercel.json
+++ b/tsconfig.vercel.json
@@ -1,17 +1,20 @@
 {
-  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "module": "CommonJS",
     "target": "ES2020",
     "lib": ["ES2020"],
+    "module": "CommonJS",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
-    "outDir": "dist"
+    "outDir": ".vercel/output/functions",
+    "rootDir": ".",
+    "paths": {
+      "*": ["*"]
+    }
   },
-  "include": ["api/**/*", "src/server/**/*"],
-  "exclude": ["node_modules"]
+  "include": ["api/**/*", "src/**/*"],
+  "exclude": ["node_modules", "dist"]
 } 
