--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@emotion/styled": "^11.11.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.8",
+    "@types/crypto-js": "^4.2.2",
     "@types/micro-cors": "^0.1.5",
     "@types/socket.io-client": "^1.4.36",
     "@vercel/node": "^5.0.2",
@@ -30,6 +31,7 @@
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
@@ -42,7 +44,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
     "socket.io": "^4.8.1",
-    "socket.io-client": "^4.7.4",
+    "socket.io-client": "^4.8.1",
     "vite": "^5.0.8",
     "zustand": "^5.0.3"
   },
