--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,12 +1,22 @@
 {
-  "extends": "./tsconfig.json",
   "compilerOptions": {
+    "target": "ES2022",
     "module": "CommonJS",
-    "outDir": "dist/server",
-    "target": "ES2020",
+    "lib": ["ES2023"],
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "outDir": "./dist/server",
+    "rootDir": "./src/server",
+    "typeRoots": ["./node_modules/@types", "./src/types"],
+    "types": ["node", "express", "express-session", "socket.io"],
+    "baseUrl": ".",
+    "paths": {
+      "*": ["node_modules/*", "src/types/*"]
+    }
   },
   "include": ["src/server/**/*"],
   "exclude": ["node_modules"]
